# libhal

./: .clangd  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CODE_OF_CONDUCT.md  Dockerfile  MODIFICATIONS  README.md  conanfile.py  cspell.json
.cache/clangd/index/: Availability.h.12F18DF14ACBE0CC.idx  AvailabilityInternal.h.9FFA329AF952A98B.idx  AvailabilityInternalLegacy.h.FA9F794C2EDC41D9.idx  AvailabilityVersions.h.EF4C1C60A1CB4511.idx  _OSByteOrder.h.89176DBEB9DD123F.idx  _OSByteOrder.h.9D70BFD875007B14.idx  ___wctype.h.2059E5FB48FCC648.idx  ___wctype.h.59A6079549473A5C.idx  __assert.9EFDA3D3E07A56A4.idx  __assertion_handler.2C7E8B88CF9EC5F9.idx  __availability.4E8C5FAC27FFF4E0.idx  __bit_reference.63061F0DA3D71D12.idx  __config.41710F5D321074BE.idx  __config_site.80FCB67C90F2E1D6.idx  __endian.h.0183814F5FF0E286.idx  __hash_table.EB140C5CF10A19AB.idx  __locale.A325ACFB51FDBA86.idx  __mbstate_t.h.5C3A3CA917403382.idx  __node_handle.D35E4AE9F760B610.idx  __split_buffer.233064A976824116.idx  __std_mbstate_t.h.E271D02EC185F505.idx  __stdarg___gnuc_va_list.h.A100A74E605F35D7.idx  __stdarg___va_copy.h.1A278A39564D64B1.idx  __stdarg_va_arg.h.B668A32101A1EC54.idx  __stdarg_va_copy.h.FEF9123F447D37BC.idx  (+1029 more)
.github/workflows/: 3.0.0-alpha.1.yml  3.0.0-alpha.2.yml  3.0.0-alpha.3.yml  3.0.1.yml  3.1.0.yml  3.2.0.yml  3.3.0.yml  4.0.0.yml  4.1.0.yml  4.2.0.yml  4.3.0.yml  api.yml  api_docs.yml  ci.yml  ci_v4.yml  ci_v5.yml  deploy-version.yml  semantic-release.yml
demos/: CMakeLists.txt  conanfile.py  main.cpp
docs/: doxygen.conf  switcher.json
docs/libhal/: error.md  gyroscope.md
include/libhal/: accelerometer.hpp  adc.hpp  allocated_buffer.hpp  angular_velocity_sensor.hpp  awaitable.hpp  buffered_can.hpp  can.hpp  coroutine.hpp  current_sensor.hpp  dac.hpp  distance_sensor.hpp  dynarray.hpp  error.hpp  functional.hpp  gyroscope.hpp  i2c.hpp  initializers.hpp  input_pin.hpp  interrupt_pin.hpp  io_waiter.hpp  lock.hpp  magnetometer.hpp  motor.hpp  no_copy_serial.hpp  output_pin.hpp  pointers.hpp  ptr.hpp  pwm.hpp  rotation_sensor.hpp  scatter_span.hpp  serial.hpp  servo.hpp  smart_ref.hpp  spi.hpp  steady_clock.hpp  storage.hpp  stream_dac.hpp  temperature_sensor.hpp  timed_interrupt.hpp  timeout.hpp  (+8 more)
sphinx/: conf.py
sphinx/_templates/: versions.html
sphinx/libhal/: functional.md  input_pin.md  spi.md
test_package/: main.cpp
tests/: accelerometer.test.cpp  adc.test.cpp  allocated_buffer.test.cpp  angular_velocity_sensor.test.cpp  buffered_can.test.cpp  can.test.cpp  circular_buffer.test.cpp  conanfile.py  coro_context.test.cpp  coro_expr.test.cpp  coro_expr2.test.cpp  coro_triple.test.cpp  coroutine.claude.test.cpp  coroutine.test.cpp  current_sensor.test.cpp  dac.test.cpp  distance_sensor.test.cpp  dynarray.test.cpp  error.test.cpp  g_force.test.cpp  gyroscope.test.cpp  helpers.cpp  helpers.hpp  i2c.test.cpp  initializers.test.cpp  input_pin.test.cpp  interrupt_pin.test.cpp  io_waiter.test.cpp  lengths.test.cpp  lock.test.cpp  magnetometer.test.cpp  main.test.cpp  mock_usb_endpoints.hpp  motor.test.cpp  network.test.cpp  output_pin.test.cpp  pimpl.test.cpp  pointers.test.cpp  ptr.test.cpp  pwm.test.cpp  (+17 more)
tests/experimental/: coroutine.test.cpp  quick_bench.cpp  quick_bench2.cpp  usb.test.cpp
v4/: CMakeLists.txt  conanfile.py
v4/demos/: CMakeLists.txt  conanfile.py
v4/docs/: conf.py  doxygen.conf  index.rst
v4/docs/api/: accelerometer.md  allocated_buffer.md  angular_velocity_sensor.md  constants.rst  containers.rst  dac.md  distance_sensor.md  error.md  functional.md  gyroscope.md  i2c.md  initializers.md  interfaces.rst  pointers.md  pwm.md  rotation_sensor.md  scatter_span.md  serial.md  servo.md  stream_dac.md  temperature_sensor.md  timed_interrupt.md  timer.md  usb.md
v4/docs/libhal/: angular_velocity_sensor.md  circular_buffer.md  index.rst  initializers.md  io_waiter.md  lock.md  units.md
v4/include/libhal/: accelerometer.hpp  adc.hpp  allocated_buffer.hpp  can.hpp  circular_buffer.hpp  edge_triggered_interrupt.hpp  i2c.hpp  input_pin.hpp  interrupt_pin.hpp  io_waiter.hpp  lock.hpp  motor.hpp  output_pin.hpp  pointers.hpp  pwm.hpp  scatter_span.hpp  serial.hpp  servo.hpp  spi.hpp  steady_clock.hpp  stream_dac.hpp  timed_interrupt.hpp  timeout.hpp  timer.hpp  units.hpp  usb.hpp
v4/include/libhal/experimental/: README.md
v4/test_package/: CMakeLists.txt  conanfile.py  main.cpp
v4/tests/: accelerometer.test.cpp  adc.test.cpp  allocated_buffer.test.cpp  angular_velocity_sensor.test.cpp  can.test.cpp  circular_buffer.test.cpp  current_sensor.test.cpp  dac.test.cpp  distance_sensor.test.cpp  error.test.cpp  g_force.test.cpp  gyroscope.test.cpp  helpers.hpp  i2c.test.cpp  initializers.test.cpp  input_pin.test.cpp  interrupt_pin.test.cpp  io_waiter.test.cpp  lengths.test.cpp  lock.test.cpp  magnetometer.test.cpp  motor.test.cpp  output_pin.test.cpp  pointers.test.cpp  pwm.test.cpp  rotation_sensor.test.cpp  scatter_span.test.cpp  serial.test.cpp  servo.test.cpp  spi.test.cpp  steady_clock.test.cpp  stream_dac.test.cpp  temperature_sensor.test.cpp  timeout.test.cpp  timer.test.cpp  usb.test.cpp  zero_copy_serial.test.cpp
v5/: .gitignore  CMakeLists.txt  README.md  conanfile.py  cspell.json
v5/modules/: accelerometer.cppm  adc.cppm  analog.cppm  angular_velocity_sensor.cppm  callback.cppm  can.cppm  containers.cppm  current_sensor.cppm  dac.cppm  distance_sensor.cppm  error.cppm  functional.cppm  gpio.cppm  gyroscope.cppm  hal.cppm  i2c.cppm  inplace_function.cppm  input_pin.cppm  interrupts.cppm  magnetometer.cppm  memory.cppm  motion_sensors.cppm  motor.cppm  output_pin.cppm  power_sensors.cppm  pwm.cppm  rotation_sensor.cppm  scatter_span.cppm  sensors.cppm  serial.cppm  servo.cppm  spi.cppm  steady_clock.cppm  temperature_sensor.cppm  timed_interrupt.cppm  units.cppm  usb.cppm
v5/test_package/: CMakeLists.txt  conanfile.py  main.cpp
v5/tests/: adc.test.cpp  callback.test.cpp  can.test.cpp  i2c.test.cpp  interrupts.test.cpp  main.test.cpp  new_scheme.test.cpp  scatter_span.test.cpp  sensors.test.cpp  spi.test.cpp  timed_interrupt.test.cpp
(+185 files in other folders)
